--- a/supported/osg-htc/osdf-pelican-cache/Chart.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/Chart.yaml
@@ -1,8 +1,8 @@
-apiVersion: v1
+apiVersion: v2
 name: osdf-pelican-cache
-# Chart version
-version: "0.0.1"
 description: Pelican-Based OSDF Cache
-# Version of application packaged for installation
-appVersion: "V7"
-#home: https://github.com/PelicanPlatform/pelican
+type: application
+
+version: "0.0.1"
+
+appVersion: "latest"
