Fix cache pvc claimName in deployment.yaml

--- a/supported/osg-htc/osdf-pelican-cache/templates/deployment.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/templates/deployment.yaml
@@ -109,7 +109,7 @@ spec:
         - name: cache-data
         {{- if .Values.cacheVolumeClaimName }}
           persistentVolumeClaim:
-            claimName: {{ .cacheVolumeClaimName }}
+            claimName: {{ .Values.cacheVolumeClaimName }}
         {{- else }}
           emptyDir: {}
         {{- end }}
