Don't log to a volume, and create a PVC
- In 7.6.2+, we're not running supervisord, and we have log filtering working
  so we can safely log to the pod logs instead of needing to persist them
  on a volume

- Create a PVC for the cache data. You can set .cacheVolume.useExisting: true
  to use an existing one.

--- a/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
@@ -1,3 +1,6 @@
+# Example: based on osgdev/itb-osdf-pelican-cache on tiger
+# use the instance name "itb"
+
 topologyResourceName: "ITB_OSDF_PELICAN_CACHE"
 topologyFQDN: "itb-osdf-pelican-cache.osgdev.chtc.io"
 
@@ -10,9 +13,9 @@ certmanager:
 
 webserverPasswdSecret: itb-osdf-pelican-webserver-passwd
 
-cacheVolumeClaimName: itb-osdf-pelican-cache-data
-logging:
-  volumeClaimName: itb-odsf-pelican-cache-logging
+cacheVolume:
+  storage: 1000Gi
+  storageClassName: 3x-replica-nvme-raddus
 
 image:
   tag: "v7.6.2"
