Partially revert "Don't log to a volume, and create a PVC"
If you define the PVC in the Helm chart and uninstall the chart (for
example to fix a wedged Helm operator) then you lose the PVC.  Oops.

I keep the removal of the log volume.

This partially reverts commit 13b1409187dc891a60108d42713828d05a9d463b.

--- a/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
@@ -13,9 +13,9 @@ certmanager:
 
 webserverPasswdSecret: itb-osdf-pelican-webserver-passwd
 
-cacheVolume:
-  storage: 1000Gi
-  storageClassName: 3x-replica-nvme-raddus
+cacheVolumeClaimName: itb-osdf-pelican-cache-data
+logging:
+  volumeClaimName: itb-odsf-pelican-cache-logging
 
 image:
   tag: "v7.6.2"
