allow disabling the webserver; bump the chart version a few times; set appVersion to v7.6.2 (the pelican version it's intended for)

--- a/supported/osg-htc/osdf-pelican-cache/Chart.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/Chart.yaml
@@ -3,6 +3,6 @@ name: osdf-pelican-cache
 description: Pelican-Based OSDF Cache
 type: application
 
-version: "0.0.1"
+version: "0.0.9"
 
-appVersion: "latest"
+appVersion: "v7.6.2"
