--- a/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
@@ -11,7 +11,9 @@ certmanager:
   enabled: true
   issuerName: letsencrypt-prod
 
-webserverPasswdSecret: itb-osdf-pelican-webserver-passwd
+webserver:
+  enabled: true
+  passwordSecret: itb-osdf-pelican-webserver-passwd
 
 cacheVolumeClaimName: itb-osdf-pelican-cache-data
 
