Add more logging and other cache config;
Remove resource limits by default; bump requests to 24Gi following Fabio's recommendation.
(The example sets them to what the current ITB cache is.)

--- a/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
+++ b/supported/osg-htc/osdf-pelican-cache/examples/tiger-osgdev-itb.yaml
@@ -15,6 +15,12 @@ webserver:
   enabled: true
   passwordSecret: itb-osdf-pelican-webserver-passwd
 
+resources:
+  requests:
+    memory: 16Gi
+  limits:
+    memory: 24Gi
+
 cacheVolumeClaimName: itb-osdf-pelican-cache-data
 
 image:
