osg-hosted-ce 4.7.6: Allow changing hosted CE image project

--- a/supported/osg-htc/osg-hosted-ce/templates/deployment.yaml
+++ b/supported/osg-htc/osg-hosted-ce/templates/deployment.yaml
@@ -124,7 +124,7 @@ spec:
       {{ end }}
       containers:
       - name: osg-hosted-ce
-        image: hub.opensciencegrid.org/opensciencegrid/hosted-ce:{{ .Values.ContainerTags.HostedCE }}
+        image: hub.opensciencegrid.org/{{ .Values.ContainerProjects.HostedCE }}/hosted-ce:{{ .Values.ContainerTags.HostedCE }}
         imagePullPolicy: Always
         volumeMounts:
         - name: osg-hosted-ce-{{ .Values.Instance }}-configuration
