--- a/supported/osg-htc/osg-hosted-ce/values.yaml
+++ b/supported/osg-htc/osg-hosted-ce/values.yaml
@@ -153,6 +153,8 @@ Persistence:
   LogVolume: null 
   # /var/lib/condor-ce
   LibCondorCeVolume: null
+  # /etc/condor-ce/local-config.d
+  CondorCeLocalConfigVolume: null
 
 # Options to allow override of the bosco directory from arbitrary git repos
 # Bosco override dir lets you set what directory you want to put your bosco
