osg-hosted-ce 4.7.8: move the CondorCeLocalConfigVolume option under Debug
this should discourage people from using it long-term.

--- a/supported/osg-htc/osg-hosted-ce/templates/deployment.yaml
+++ b/supported/osg-htc/osg-hosted-ce/templates/deployment.yaml
@@ -42,10 +42,10 @@ spec:
         persistentVolumeClaim:
           claimName: {{ .Values.Persistence.LibCondorCeVolume }}
       {{ end }}
-      {{ if .Values.Persistence.CondorCeLocalConfigVolume }}
+      {{ if .Values.Debug.CondorCeLocalConfigVolume }}
       - name: condor-ce-local-config
         persistentVolumeClaim:
-          claimName: {{ .Values.Persistence.CondorCeLocalConfigVolume }}
+          claimName: {{ .Values.Debug.CondorCeLocalConfigVolume }}
       {{ end }}
       - name: osg-hosted-ce-{{ .Values.Instance }}-configuration
         configMap:
@@ -155,7 +155,7 @@ spec:
         - name: lib-condor-ce
           mountPath: /var/lib/condor-ce
         {{ end }}
-        {{ if .Values.Persistence.CondorCeLocalConfigVolume }}
+        {{ if .Values.Debug.CondorCeLocalConfigVolume }}
         - name: condor-ce-local-config
           mountPath: /etc/condor-ce/local-config.d
         {{ end }}
