--- a/supported/osg-htc/osg-hosted-ce/values.yaml
+++ b/supported/osg-htc/osg-hosted-ce/values.yaml
@@ -153,8 +153,6 @@ Persistence:
   LogVolume: null 
   # /var/lib/condor-ce
   LibCondorCeVolume: null
-  # /etc/condor-ce/local-config.d
-  CondorCeLocalConfigVolume: null
 
 # Options to allow override of the bosco directory from arbitrary git repos
 # Bosco override dir lets you set what directory you want to put your bosco
@@ -225,6 +223,9 @@ Debug:
   # When 'ContinuOnError: true', ignore fatal errors on startup
   # (default: false)
   ContinueOnError: false
+  # CondorCeLocalConfigVolume mounts a PVC at /etc/condor-ce/local-config.d
+  #   where you can make changes by hand for debugging purposes.
+  CondorCeLocalConfigVolume: null
 
 # FOR DEVELOPMENT PURPOSES ONLY!
 # Setting 'Enabled: true' below does the following:
