--- a/contrib/matyasosg/pelican-cache/templates/deployment.yaml
+++ b/contrib/matyasosg/pelican-cache/templates/deployment.yaml
@@ -67,7 +67,7 @@ spec:
               mountPath: /etc/pelican/server-web-passwd
               readOnly: true
               subPath: server-web-passwd
-          {{- with .Values.volumeMounts }}
+          {{- with .Values.extraVolumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
 
@@ -160,7 +160,7 @@ spec:
               mode: 0o644
               path: server-web-passwd
               secretName: {{ .Values.secrets.webserverPassword }}
-      {{- with .Values.volumes }}
+      {{- with .Values.extraVolumes }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
